After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710481 - Wheel shouldn't fake cursor keys with restricted scrolling
Wheel shouldn't fake cursor keys with restricted scrolling
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.34.x
Other Linux
: Normal normal
: vte-0-36
Assigned To: VTE Maintainers
VTE Maintainers
[fixed-0-36][needed-next][commit:2f43...
Depends on:
Blocks:
 
 
Reported: 2013-10-18 22:47 UTC by Egmont Koblinger
Modified: 2014-04-06 18:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (586 bytes, patch)
2013-10-18 22:47 UTC, Egmont Koblinger
committed Details | Review

Description Egmont Koblinger 2013-10-18 22:47:11 UTC
Created attachment 257673 [details] [review]
Fix

With restricted scrolling (e.g.: echo -e '\e[10;20r') the mouse wheel generates fake keypress events.

This is weird, because (unlike with the alternate screen) there can be a scrollbar visible, hence the expected behavior is that the wheel adjusts that scrollbar.

In xterm-297 the wheel adjusts the scrollbar, independently of the alternate scroll mode's state (DEC 1007).

Patch attached.
Comment 1 Christian Persch 2013-11-18 18:38:01 UTC
Fixed on vte-0-36.