Don't fake cursor keys on normal screen with restricted scrolling.

https://bugzilla.gnome.org/show_bug.cgi?id=710481